remove api keys from project
as title said

--- a/notebooks/Lab1_Part1.ipynb
+++ b/notebooks/Lab1_Part1.ipynb
@@ -54,10 +54,10 @@
     "install.packages(\"twitteR\")\n",
     "\n",
     "library(twitteR)\n",
-    "CONSUMER_KEY = \"LhS2LVBbmbvJXwFRvoNZ2fuBP\"\n",
-    "CONSUMER_SECRET = \"0Ym9QH3sDRXlVDTgxyNafMEKhaJGAZECscaPTePRZNWoaeppdB\"\n",
-    "ACCESS_TOKEN = \"829481304706146305-8pCQl9Zbm6NdPeWulXTjyPmNvwJZyg9\"\n",
-    "ACCESS_TOKEN_SECRET = \"I5w2fGH0wHN3UhdMShDiU7BzcpePVFMVS20LhAH4ZuzoC\"\n",
+    "CONSUMER_KEY = \"\"\n",
+    "CONSUMER_SECRET = \"\"\n",
+    "ACCESS_TOKEN = \"\"\n",
+    "ACCESS_TOKEN_SECRET = \"\"\n",
     "\n",
     "setup_twitter_oauth(CONSUMER_KEY,\n",
     "                    CONSUMER_SECRET,\n",
